--- a/web-wao/package.json
+++ b/web-wao/package.json
@@ -10,6 +10,8 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "graphdracula": "^1.3.0",
+    "raphael": "^2.3.0",
     "three": "^0.134.0"
   }
 }
